// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bulkCreate should display error message when bulkCreate request fails 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--medium"
  >
    Load Kibana objects
  </h2>,
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiText euiText--medium"
      >
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary"
        data-test-subj="loadSavedObjects"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Load Kibana objects
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--s css-i2qclb-euiSpacer-s"
  />,
  <div
    class="euiCallOut euiCallOut--warning"
    data-test-subj="loadSavedObjects_failed"
  >
    <div
      class="euiCallOutHeader"
    >
      <span
        class="euiCallOutHeader__title"
      >
        Request failed, Error: simulated bulkRequest error
      </span>
    </div>
  </div>,
]
`;

exports[`bulkCreate should display success message when bulkCreate is successful 1`] = `
Array [
  <h2
    class="euiTitle euiTitle--medium"
  >
    Load Kibana objects
  </h2>,
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiText euiText--medium"
      >
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        class="euiButton euiButton--primary"
        data-test-subj="loadSavedObjects"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            Load Kibana objects
          </span>
        </span>
      </button>
    </div>
  </div>,
  <div
    class="euiSpacer euiSpacer--s css-i2qclb-euiSpacer-s"
  />,
  <div
    class="euiCallOut euiCallOut--success"
    data-test-subj="loadSavedObjects_success"
  >
    <div
      class="euiCallOutHeader"
    >
      <span
        class="euiCallOutHeader__title"
      >
        1 saved objects successfully added
      </span>
    </div>
  </div>,
]
`;

exports[`renders 1`] = `
<Fragment>
  <EuiTitle
    size="m"
  >
    <h2>
      Load Kibana objects
    </h2>
  </EuiTitle>
  <EuiFlexGroup
    alignItems="center"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem>
      <EuiText>
        <p>
          Imports index pattern, visualizations and pre-defined dashboards.
        </p>
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="loadSavedObjects"
        isLoading={false}
        onClick={[Function]}
      >
        Load Kibana objects
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
</Fragment>
`;
